--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "tesla-blitz-club-website",
+  "name": "blitz-tesla-club",
   "version": "1.0.0",
-  "description": "Modern, responsive website for the Blitz Tesla Club featuring:\r - Responsive design for all devices\r - Mobile-optimized navigation\r - Smooth scrolling\r - Interactive elements\r - Tesla-inspired design",
-  "main": "register.js",
+  "description": "Blitz Tesla Club Website",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "setup": "./setup-public.sh"
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
-    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.6.3",
-    "path": "^0.12.7"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.7",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^3.0.2"
   }
 }
