--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://www.blitztclub.com" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
-      ]
+  "cleanUrls": true,
+  "functions": {
+    "api/**/*": {
+      "memory": 1024,
+      "maxDuration": 10
     }
-  ],
+  },
+  "trailingSlash": false,
   "routes": [
     { "src": "/", "dest": "/index.html" },
     { "src": "/dashboard", "dest": "/dashboard.html" },
@@ -19,6 +17,7 @@
     { "src": "/news", "dest": "/news.html" },
     { "src": "/contact", "dest": "/contact.html" },
     { "src": "/privacy", "dest": "/privacy.html" },
+    { "src": "/verify-email", "dest": "/api/verify-email" },
     { "src": "/verification-success", "dest": "/verification-success.html" },
     { "src": "/verification-failed", "dest": "/verification-failed.html" }
   ],
