--- a/vercel.json
+++ b/vercel.json
@@ -27,5 +27,15 @@
   "crons": [{
     "path": "/api/cron",
     "schedule": "0 10 * * *"
-  }]
+  }],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
+    }
+  ]
 } 
