--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "public",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -37,6 +35,8 @@
   }],
   "github": {
     "enabled": true,
-    "silent": true
+    "silent": true,
+    "repo": "kevin046/Blitz-Tesla-Club",
+    "branch": "main"
   }
 } 
