Fix verification flow and token handling
- Add better error logging in verify-email.js
- Update verification URL to use dynamic base URL
- Improve error handling in dashboard.html
- Fix token verification process

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "public",
+  "outputDirectory": ".",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -37,6 +36,8 @@
   }],
   "github": {
     "enabled": true,
-    "silent": true
+    "silent": true,
+    "repo": "kevin046/Blitz-Tesla-Club",
+    "branch": "main"
   }
 } 
