--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon dev-server.js"
+    "dev": "nodemon dev-server.js",
+    "build": "echo 'No build step needed'"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
@@ -13,7 +14,6 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.7",
     "dotenv": "^16.3.1",
-    "crypto": "^1.0.1",
     "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
