--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,8 @@
     { "src": "/contact", "dest": "/contact.html" },
     { "src": "/privacy", "dest": "/privacy.html" },
     { "src": "/verification-success", "dest": "/verification-success.html" },
-    { "src": "/verification-failed", "dest": "/verification-failed.html" }
+    { "src": "/verification-failed", "dest": "/verification-failed.html" },
+    { "src": "/api/register", "dest": "/api/register" }
   ],
   "functions": {
     "api/**/*": {
