--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,16 @@
       "dest": "/api/verify-email"
     },
     {
+      "src": "/api/register",
+      "dest": "/api/register",
+      "methods": ["POST", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "POST, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+      }
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1",
       "headers": {
@@ -25,8 +35,7 @@
     { "src": "/contact", "dest": "/contact.html" },
     { "src": "/privacy", "dest": "/privacy.html" },
     { "src": "/verification-success", "dest": "/verification-success.html" },
-    { "src": "/verification-failed", "dest": "/verification-failed.html" },
-    { "src": "/api/register", "dest": "/api/register" }
+    { "src": "/verification-failed", "dest": "/verification-failed.html" }
   ],
   "functions": {
     "api/**/*": {
