--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon dev-server.js",
+    "serve": "python -m http.server 8000",
     "build": "echo 'No build step needed'"
   },
   "dependencies": {
