--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,13 @@
     },  
     { "src": "/", "dest": "/index.html" },
     { "src": "/dashboard", "dest": "/dashboard.html" },
-    { "src": "/login", "dest": "/login.html" },
+    { 
+      "src": "/login", 
+      "dest": "/login.html",
+      "headers": {
+        "Cache-Control": "no-store, must-revalidate"
+      }
+    },
     { "src": "/events", "dest": "/events.html" },
     { "src": "/gallery", "dest": "/gallery.html" },
     { "src": "/executive", "dest": "/executive.html" },
