--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 EMAIL_PASSWORD=yukimailbox99
 SUPABASE_URL=https://qhkcrrphsjpytdfqfamq.supabase.co
-SUPABASE_KEY=your_supabase_key 
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+FORMSUBMIT_DESTINATION=info@blitztclub.com
+FORMSUBMIT_CONFIRMATION_TEMPLATE=box
+SITE_URL=https://blitztclub.com
