--- a/vercel.json
+++ b/vercel.json
@@ -35,7 +35,17 @@
     { "src": "/contact", "dest": "/contact.html" },
     { "src": "/privacy", "dest": "/privacy.html" },
     { "src": "/verification-success", "dest": "/verification-success.html" },
-    { "src": "/verification-failed", "dest": "/verification-failed.html" }
+    { "src": "/verification-failed", "dest": "/verification-failed.html" },
+    {
+      "src": "/api/update-member-ids",
+      "dest": "/api/update-member-ids",
+      "methods": ["POST"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "POST",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+      }
+    }
   ],
   "functions": {
     "api/**/*": {
