--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZi
 FORMSUBMIT_DESTINATION=info@blitztclub.com
 FORMSUBMIT_CONFIRMATION_TEMPLATE=box
 SITE_URL=https://blitztclub.com
+NODE_ENV=development
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+PRODUCTION_ORIGIN=https://www.blitztclub.com
