--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,10 @@
       "methods": ["OPTIONS"],
       "status": 204,
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "${process.env.NODE_ENV === 'production' ? 'https://www.blitztclub.com' : 'http://localhost:3000'}",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true",
         "Access-Control-Max-Age": "86400"
       }
     },
@@ -18,9 +19,10 @@
       "dest": "/api/generate-member-id.js",
       "methods": ["POST"],
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "${process.env.NODE_ENV === 'production' ? 'https://www.blitztclub.com' : 'http://localhost:3000'}",
         "Access-Control-Allow-Methods": "POST",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
       }
     },
     {
