--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://www.blitztclub.com"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
