--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "blitz-tesla-club",
   "version": "1.0.0",
-  "description": "Blitz Tesla Club Website",
-  "main": "server.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon dev-server.js",
-    "serve": "python -m http.server 8000",
-    "build": "echo 'No build step needed'"
+    "dev": "node dev-server.js",
+    "build": "echo 'No build step required'",
+    "start": "node dev-server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
+    "@supabase/supabase-js": "^2.39.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.6",
-    "nodemon": "^3.1.9",
-    "nodemailer": "^6.9.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "express": "^4.18.2"
   }
 }
