--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,66 @@
   ],
   "routes": [
     {
+      "src": "/login",
+      "dest": "/login.html"
+    },
+    {
+      "src": "/register",
+      "dest": "/register.html"
+    },
+    {
+      "src": "/dashboard",
+      "dest": "/dashboard.html"
+    },
+    {
+      "src": "/events",
+      "dest": "/events.html"
+    },
+    {
+      "src": "/gallery",
+      "dest": "/gallery.html"
+    },
+    {
+      "src": "/executive",
+      "dest": "/executive.html"
+    },
+    {
+      "src": "/news",
+      "dest": "/news.html"
+    },
+    {
+      "src": "/contact",
+      "dest": "/contact.html"
+    },
+    {
+      "src": "/privacy",
+      "dest": "/privacy.html"
+    },
+    {
+      "src": "/terms",
+      "dest": "/terms.html"
+    },
+    {
+      "src": "/about",
+      "dest": "/about.html"
+    },
+    {
+      "src": "/sponsors",
+      "dest": "/sponsors.html"
+    },
+    {
+      "src": "/verification-success",
+      "dest": "/verification-success.html"
+    },
+    {
+      "src": "/verification-failed",
+      "dest": "/verification-failed.html"
+    },
+    {
+      "src": "/verification-sent",
+      "dest": "/verification-sent.html"
+    },
+    {
       "src": "/api/generate-member-id",
       "methods": ["POST", "OPTIONS"],
       "dest": "api/generate-member-id.js"
@@ -32,19 +92,19 @@
       "dest": "api/index.js"
     },
     {
+      "src": "/styles.css",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable",
+        "Content-Type": "text/css"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "$1",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type"
-      }
-    },
-    {
-      "src": "/styles.css",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable",
-        "Content-Type": "text/css"
       }
     }
   ]
