--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,14 @@
   "builds": [
     { "src": "*.html", "use": "@vercel/static" },
     { "src": "*.css", "use": "@vercel/static" },
+    { "src": "*.js", "use": "@vercel/static" },
     { "src": "/api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
+    {
+      "src": "/",
+      "dest": "/index.html"
+    },
     {
       "src": "/login",
       "dest": "/login.html"
@@ -97,6 +102,10 @@
         "Cache-Control": "public, max-age=31536000, immutable",
         "Content-Type": "text/css"
       }
+    },
+    {
+      "src": "/join",
+      "dest": "/register.html"
     },
     {
       "src": "/(.*)",
