--- a/vercel.json
+++ b/vercel.json
@@ -108,13 +108,12 @@
       "dest": "/register.html"
     },
     {
+      "src": "/(.*)\\.html",
+      "dest": "/$1.html"
+    },
+    {
       "src": "/(.*)",
-      "dest": "$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type"
-      }
+      "dest": "/$1.html"
     }
   ]
 } 
