--- a/vercel.json
+++ b/vercel.json
@@ -8,127 +8,40 @@
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/login",
-      "dest": "/login.html"
-    },
-    {
-      "src": "/register",
-      "dest": "/register.html"
-    },
-    {
-      "src": "/dashboard",
-      "dest": "/dashboard.html"
-    },
-    {
-      "src": "/events",
-      "dest": "/events.html"
-    },
-    {
-      "src": "/gallery",
-      "dest": "/gallery.html"
-    },
-    {
-      "src": "/executive",
-      "dest": "/executive.html"
-    },
-    {
-      "src": "/news",
-      "dest": "/news.html"
-    },
-    {
-      "src": "/contact",
-      "dest": "/contact.html"
-    },
-    {
-      "src": "/privacy",
-      "dest": "/privacy.html"
-    },
-    {
-      "src": "/terms",
-      "dest": "/terms.html"
-    },
-    {
-      "src": "/about",
-      "dest": "/about.html"
-    },
-    {
-      "src": "/sponsors",
-      "dest": "/sponsors.html"
-    },
-    {
-      "src": "/verification-success",
-      "dest": "/verification-success.html"
-    },
-    {
-      "src": "/verification-failed",
-      "dest": "/verification-failed.html"
-    },
-    {
-      "src": "/verification-sent",
-      "dest": "/verification-sent.html"
-    },
-    {
-      "src": "/api/generate-member-id",
-      "methods": ["POST", "OPTIONS"],
-      "dest": "api/generate-member-id.js"
-    },
-    {
-      "src": "/api/create-profile",
-      "methods": ["POST", "OPTIONS"],
-      "dest": "api/create-profile.js"
-    },
-    {
-      "src": "/api/cleanup-orphaned-users",
-      "methods": ["POST", "OPTIONS"],
-      "dest": "api/cleanup-orphaned-users.js"
-    },
-    {
-      "src": "/api/test",
-      "methods": ["GET"],
-      "dest": "api/test.js"
-    },
-    {
-      "src": "/api",
-      "methods": ["GET"],
-      "dest": "api/index.js"
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://www.blitztclub.com",
+        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type,Accept,Origin",
+        "Access-Control-Allow-Credentials": "true"
+      },
+      "continue": true
     },
     {
       "src": "/styles.css",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable",
         "Content-Type": "text/css"
-      }
+      },
+      "continue": true
     },
-    {
-      "src": "/join",
-      "dest": "/register.html"
-    },
-    {
-      "src": "/(.*)\\.html",
-      "dest": "/$1.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://www.blitztclub.com" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type,Accept,Origin" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
-      ]
-    }
-  ],
-  "github": {
-    "enabled": true,
-    "silent": true
-  }
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/login", "dest": "/login.html" },
+    { "src": "/register", "dest": "/register.html" },
+    { "src": "/dashboard", "dest": "/dashboard.html" },
+    { "src": "/events", "dest": "/events.html" },
+    { "src": "/gallery", "dest": "/gallery.html" },
+    { "src": "/executive", "dest": "/executive.html" },
+    { "src": "/news", "dest": "/news.html" },
+    { "src": "/contact", "dest": "/contact.html" },
+    { "src": "/privacy", "dest": "/privacy.html" },
+    { "src": "/terms", "dest": "/terms.html" },
+    { "src": "/about", "dest": "/about.html" },
+    { "src": "/sponsors", "dest": "/sponsors.html" },
+    { "src": "/verification-success", "dest": "/verification-success.html" },
+    { "src": "/verification-failed", "dest": "/verification-failed.html" },
+    { "src": "/verification-sent", "dest": "/verification-sent.html" },
+    { "src": "/join", "dest": "/register.html" },
+    { "src": "/(.*)", "dest": "/$1.html" }
+  ]
 } 
