--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "blitz-tesla-club",
+  "name": "blitz-t-club",
   "version": "1.0.0",
   "private": true,
   "engines": {
     "node": ">=18.x"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.47.10",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "@supabase/supabase-js": "^2.39.3",
+    "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^9.0.1",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "nodemailer": "^6.9.9",
+    "pg": "^8.11.3"
   },
-  "description": "Modern, responsive website for the Blitz Tesla Club featuring:\r - Responsive design for all devices\r - Mobile-optimized navigation\r - Smooth scrolling\r - Interactive elements\r - Tesla-inspired design",
-  "main": "auth.js",
+  "description": "Blitz T Club Website",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node migrate-to-neon.js",
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "echo 'No build step'",
     "vercel-build": "echo 'Vercel build step'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
