update vendor system

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,6 @@
 SUPABASE_URL=https://qhkcrrphsjpytdfqfamq.supabase.co
 SUPABASE_KEY=your_supabase_key
-EMAIL_PASSWORD=yukimailbox99 
+EMAIL_PASSWORD=yukimailbox99
+MEGA_EMAIL=Kevin.Lin@vibedrift.com	
+MEGA_PASSWORD=H@ppydog123
+MEGA_FOLDER_ID=W5pn1Kja
